--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<meta name="robots" content="noindex, nofollow"/>
 </head>
 <body>
-
+	<h4 style="color: red;">PLEASE NOTE: This website is curretly being updated. Expect that the SM64 game will sometimes not load. Thanks for your support!
 	<div id = "gameDivId"></div>
 
 	
