--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="icon" type="image/png" sizes="64x64" href="mariohohoho.PNG">
 	<meta charset="utf-8">
 	<title>Super Mario 64 webpage test</title>
 
