--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 	
 	
-		<script src="//load.retroemulator.com/retroLoader.js" type="text/javascript"></script>
+		<script src="retroLoader.js" type="text/javascript"></script>
 <script src="main.js"></script>
 	
 </body>
